--- a/src/components/Title/TitlePage.module.css
+++ b/src/components/Title/TitlePage.module.css
@@ -1,3 +1,9 @@
+.title {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+
 .title__h1 {
   font-size: 64px;
   font-weight: 600;
@@ -10,7 +16,6 @@
 
   color: #8E95A9;
 
-  padding-top: 16px;
   width: 40%;
 }
 
