--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -1,19 +1,61 @@
-.main-button {
+.button {
   font-size: 16px;
+  width: max-content;
+  
+  transition: all 0.5s;
+}
 
+.main-button {
   border-radius: 12px;
-  border: 2px solid #7B6EF6;
+  border: 2px solid var(--primary-purple);
 
-  background: #7B6EF6;
-  color: #FFFFFF;
+  background: var(--primary-purple);
+  color: var(--white);
 
   padding: 16px 32px;
-  width: max-content;
 }
 
 .main-button:hover {
-  background: #6055c0;
-  border: 2px solid #6055c0;
+  background: var(--purple-hover);
+  border: 2px solid var(--purple-hover);
+}
+
+.movie-item__description_add {
+  font-weight: 600;
+  line-height: 24px;
+  letter-spacing: 0.02em;
+
+  border: none;
+  background-color: transparent;
+  color: var(--primary-purple);
+
+  vertical-align: middle;
+  padding: var(--zero-padding);
+}
+
+.movie-item__description_add img {
+  vertical-align: middle;
+  padding-right: 8px;
+
+  transition: filter 0.5s;
+}
+
+.movie-item__description_add:hover {
+  color: var(--white)
+}
+
+.movie-item__description_add:hover img {
+  filter: brightness(2.5);
+}
+
+@media (max-width: 600px) {
+  .movie-item__description_add {
+    font-size: 12px;
+  }
+
+  .movie-item__description_add img {
+    padding-right: 4px;
+  }
 }
 
 @media (max-width: 600px) {
