--- a/src/components/MovieItem/MovieItem.module.css
+++ b/src/components/MovieItem/MovieItem.module.css
@@ -22,7 +22,7 @@
   top: 8px;
   left: 8px;
 
-  background: rgba(0, 0, 0, 0.651);
+  background: #000000a6;
   backdrop-filter: blur(8px);
 
   border-radius: 8px;
@@ -35,7 +35,6 @@
 }
 
 .movie-item__rating_count {
-  font-size: 16px;
   line-height: 24px;
 
   color: #FFAD49;
@@ -50,7 +49,6 @@
 }
 
 .movie-item__description_title {
-  font-size: 16px;
   font-weight: 600;
   line-height: 24px;
   letter-spacing: 0.02em;
