--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,12 @@
 :root {
+  --primary-purple: #7B6EF6;
+  --white: #FFFFFF;
+  --purple-hover: #6055c0;
+  --grey: #8E95A9;
+  --zero-padding: 0;
+
   font-family: "Montserrat", serif;
+  font-size: 16px;
   font-weight: 400;
   line-height: 24px;
 
@@ -8,25 +15,14 @@
 }
 
 body {
+  height: 100vh;
   margin: 0;
   box-sizing: border-box;
 
   background-image: url('./assets/Background.svg');
   background-size: cover;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-position: center;
-}
-
-body::before {
-  content: "";
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  backdrop-filter: blur(350px);
-  z-index: -1;
+  background-repeat: repeat-y;
+  background-position: center; 
 }
 
 h1,
@@ -44,4 +40,8 @@ button {
 a {
   text-decoration: none;
   transition: all 0.5s;
+}
+
+#root {
+  padding: 160px 120px 60px 120px;
 }
