--- a/src/pages/Main/Main.module.css
+++ b/src/pages/Main/Main.module.css
@@ -1,5 +1,11 @@
+.top-panel {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+}
+
 .bottom-panel {
-  padding: 80px 0 50px 0;
+  padding: 80px 0 0 0;
 
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
