--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
   --primary-purple: #7B6EF6;
   --white: #FFFFFF;
   --purple-hover: #6055c0;
-  --grey: #8E95A9;
+  --grey: #8e95a9;
   --zero-padding: 0;
 
   font-family: "Montserrat", serif;
