--- a/src/pages/Main/Main.module.css
+++ b/src/pages/Main/Main.module.css
@@ -13,6 +13,26 @@
   justify-content: center;
 }
 
+.loader {
+  margin: auto;
+  border: 5px solid #0e1320;
+  border-radius: 50%;
+  border-top: 5px solid #121829CC;
+  width: 50px;
+  height: 50px;
+  animation: spinner 2s linear infinite;
+}
+
+@keyframes spinner {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
 @media (max-width: 625px) {
   .bottom-panel {
     grid-template-columns: repeat(2, minmax(150px, 1fr));
