--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -1,7 +1,7 @@
 .button {
   font-size: 16px;
   width: max-content;
-  
+
   transition: all 0.5s;
 }
 
@@ -20,7 +20,8 @@
   border: 2px solid var(--purple-hover);
 }
 
-.movie-item__description_add {
+.movie-item__description_add,
+.movie-item__description_done {
   font-weight: 600;
   line-height: 24px;
   letter-spacing: 0.02em;
@@ -33,11 +34,21 @@
   padding: var(--zero-padding);
 }
 
-.movie-item__description_add img {
+.movie-item__description_done {
+  color: #37D8A7;
+}
+
+.movie-item__description_add img,
+.movie-item__description_done img {
   vertical-align: middle;
   padding-right: 8px;
 
   transition: filter 0.5s;
+}
+
+.movie-item__description_done img {
+  max-width: 24px;
+  filter: hue-rotate(-84.43deg) saturate(121.44%) brightness(98.82%);
 }
 
 .movie-item__description_add:hover {
