--- a/src/components/MovieItem/MovieItem.module.css
+++ b/src/components/MovieItem/MovieItem.module.css
@@ -3,6 +3,8 @@
   flex-direction: column;
   gap: 16px;
 
+  box-sizing: border-box;
+  height: 100%;
   padding: 8px 8px 16px 8px;
 }
 
@@ -39,7 +41,7 @@
 .movie-item__rating_image img {
   display: block;
   align-self: center;
-  
+
   max-height: 16px;
   max-width: 16px;
 }
@@ -55,6 +57,8 @@
   flex-direction: column;
   gap: 16px;
 
+  height: 100%;
+  justify-content: space-between;
   padding: 8px;
 }
 
