--- a/src/index.css
+++ b/src/index.css
@@ -15,14 +15,23 @@
 }
 
 body {
-  height: 100vh;
+  height: 100%;
   margin: 0;
   box-sizing: border-box;
+}
 
+body::before {
+  content: '';
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
   background-image: url('./assets/Background.svg');
-  background-size: cover;
+  background-size: 100% auto;
   background-repeat: repeat-y;
-  background-position: center; 
+  background-position: top center;
+  z-index: -2;
 }
 
 h1,
